; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_disk_posix.c_la_opendirat.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_disk_posix.c_la_opendirat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_CLOEXEC = common dso_local global i32 0, align 4
@O_RDONLY = common dso_local global i32 0, align 4
@AT_FDCWD = common dso_local global i32 0, align 4
@ENOTSUP = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@O_BINARY = common dso_local global i32 0, align 4
@O_DIRECTORY = common dso_local global i32 0, align 4
@O_EXEC = common dso_local global i32 0, align 4
@O_PATH = common dso_local global i32 0, align 4
@O_SEARCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @la_opendirat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @la_opendirat(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* @O_CLOEXEC, align 4
  %8 = load i32, i32* @O_RDONLY, align 4
  %9 = or i32 %7, %8
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @AT_FDCWD, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @ENOTSUP, align 4
  store i32 %14, i32* @errno, align 4
  store i32 -1, i32* %3, align 4
  br label %19

15:                                               ; preds = %2
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @open(i8* %16, i32 %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %15, %13
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @open(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
